# sidebar-editor

./: .env.example  .gitignore  ARCHITECTURE.md  NOT-IMPLEMENTED.md  OVERVIEW.md  README.md  assessment.md  index.html  jokes.md  package-lock.json  package.json  pnpm-lock.yaml  spec.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: TAURI_APP_SCAFFOLD_SPEC.md
docs/architecture/: ARCHITECTURE.md
docs/overview/: OVERVIEW.md
docs/specs/: 01-product.md  02-technology.md  03-architecture.md  05-workbench.md  06-state-management.md  07-workspace.md  08-ai-agent.md  09-tool-system.md  10-editor.md  11-git.md  12-ipc.md  13-theming.md  14-security.md  15-testing.md  16-build.md  17-roadmap.md  18-glossary.md  19-planning-system.md  20-editor-formatting-and-theming.md  21-context-compaction.md  23-skills-system.md  25-lsp-diagnostics.md  26-search-panel.md  27-local-model-ux.md  29-skills-registry.md  30-agent-context-and-model-settings.md  31-llm-eval-harness.md  32-agent-error-recovery.md  33-rust-path-enforcement.md  34-context-overflow-warnings.md  35-workspace-lock.md  README.md  (+4 more)
scripts/: dev.mjs  pull-recommended-ollama.sh  release.mjs  sync-vscode-icons.mjs
sidecar/: package-lock.json  package.json
src/: App.svelte  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs.rs  main.rs  sidecar.rs  watcher.rs
src-tauri/src/modules/: commands.rs  filesystem.rs  git.rs  icon_pack.rs  lsp.rs  mod.rs  watcher.rs
tests/: README.md
(+271 files in other folders)
